[gd_scene load_steps=6 format=2]

[ext_resource path="res://listChoosePopup.gd" type="Script" id=1]
[ext_resource path="res://tui/tuiLabel_pure.gd" type="Script" id=2]
[ext_resource path="res://tui/tuiButton_pure.tscn" type="PackedScene" id=3]
[ext_resource path="res://tui/tuiVBox.gd" type="Script" id=4]
[ext_resource path="res://tui/tuiPanel.gd" type="Script" id=6]

[node name="listChoosePopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Control" parent="."]
margin_left = 264.0
margin_top = 415.0
margin_right = 376.0
margin_bottom = 545.0
script = ExtResource( 6 )

[node name="VBoxContainer" type="Control" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 105.0
margin_bottom = 123.0
script = ExtResource( 4 )

[node name="text" type="Control" parent="Panel/VBoxContainer"]
margin_right = 98.0
margin_bottom = 14.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="Control" parent="Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 98.0
margin_bottom = 116.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonA" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]

[node name="buttonB" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]

[node name="cancelButton" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
text = "Cancel"
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/buttonA" to="." method="_on_buttonA_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/buttonB" to="." method="_on_buttonB_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/cancelButton" to="." method="_on_cancelButton_pressed"]
